# FSIR

./: .gitignore  config.toml  exam.py  pyproject.toml  test.py  train.py
src/config/: config.py
src/data/: dataloader.py  dataset.py
src/engin/: __init__.py  trainer.py
src/kernels/: kernels_12.pt  kernels_bicubicx234.pt
src/model/: __init__.py  model.py
src/model/backbone/: FDL.py  resunet.py  vgg19.py
src/utils/: __init__.py  utils.py
